<resources>
    <string name="app_name">Cipcipp</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Rekomendasi Pulsa</string>
    <string name="menu_gallery">Lihat lebih lengkap</string>
    <string name="menu_slideshow">Kontribusi</string>
    <string name="menu_tools">Lihat Kontribusi</string>
    <string name="menu_about">Tentang Cipcipp</string>
    <string name="menu_send">Hubungi kami</string>
    <string name="harga_pulsa">Pulsa Termurah </string>
    <string name="harga_detail_pulsa">Tabel Pulsa </string>
    <string name="last_update">update terakhir: %1$s</string>
    <string name="open_app_text">Buka aplikasi:</string>
    <string name="report"> Lapor beda data </string>
    <string name="report_check"> cek laporan beda data </string>
    <string name="facebook_app_id">1066367710221280</string>
    <string name="fb_login_protocol_scheme">fb1066367710221280</string>
    <string name="nominal">Nominal</string>
    <string name="harga">Harga</string>
    <string name="provider">Provider</string>
    <string name="provider_icon">provider_icon</string>
    <string name="lebih_lengkap">lihat lebih Lengkap</string>
    <string name="icon_lebih_lengkap">icon_lebih_lengkap</string>
    <string name="email_filed">email</string>
    <string name="password_field">password</string>
    <string name="sign_in_field">sign in</string>
    <string name="sign_out_field">sign out</string>
    <string name="sign_up_field">sign up</string>
    <string name="harga_tercantum">harga sebenarnya</string>
    <string name="upload_screenshot_di_sini">bukti screenshot</string>
    <string name="masukkan_screenshot">masukkan screenshot</string>
    <string name="source_code_link">source code link</string>
    <string name="carrier_smartfren">Smartfren</string>
    <string name="carrier_tri">Tri</string>
    <string name="carrier_axis">Axis</string>
    <string name="carrier_xl">XL</string>
    <string name="carrier_indosat">Indosat</string>
    <string name="carrier_tsel">Telkomsel</string>
    <string name="sort_image_button">sort image button</string>
    <string name="data_laporan_harga">Laporan harga</string>
    <string name="yuk_kontribusi_di_sini">yuk kontribusi di sini</string>
    <string name="punya_harga_lain">menemukan harga yang lebih murah selain di atas?</string>
    <string name="username">username</string>
    <string name="tahun_lahir">tahun lahir</string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sudah_punya_akun_sebelumnya">sudah punya akun sebelumnya?</string>
    <string name="belum_punya_akun">belum punya akun?</string>
    <string name="untuk_melanjutkan_silakan_daftar_sign_in">untuk melanjutkan, silakan daftar / sign in</string>
    <string name="open_drawer">open navigation</string>
    <string name="close_drawer">close drawer</string>
    <string name="rekomendasi_pulsa">Rekomendasi Pulsa</string>
    <string name="guest">Guest</string>
    <string name="guest_email">guest@cipcipp.com</string>
    <string name="menu_policy">Kebijakan Privasi</string>
    <string name="menu_tac">Syarat dan Ketentuan</string>
    <string name="refresh">refresh</string>
    <string name="eh_apaan_ini">126723861127-fa3g196lk966r1d3mgfpd0ars5j12qs9.apps.googleusercontent.com</string>
</resources>
