<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rekomendasi_pulsa"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/rekomendasi_pulsa"
            app:actionLayout="@layout/activity_anchor"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery"
            app:actionLayout="@layout/activity_anchor" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow"
            app:actionLayout="@layout/activity_anchor" />
    </group>

    <group android:checkableBehavior="single">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/menu_policy" />
            <item
                android:id="@+id/nav_term_and_cond"
                android:title="@string/menu_tac" />
        </menu>

    </group>

</menu>

