<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <TextView
        android:id="@+id/sign_up_keterangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/untuk_melanjutkan_silakan_daftar_sign_in"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:gravity="center"
        />
    <LinearLayout
        android:id="@+id/sign_up_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:id="@+id/sign_up_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/username"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/spinner_bg_color"
        android:layout_margin="10dp">

        <Spinner
            android:id="@+id/sign_up_kelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/spinner_bg_color"
        android:layout_margin="10dp">

        <Spinner
            android:id="@+id/sign_up_TTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:baselineAligned="false"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/spinner_bg_color"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/sign_up_provinces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/spinner_bg_color"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/sign_up_kota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <EditText
        android:id="@+id/sign_up_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_filed"/>
    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_field"
        />
    <Button
        android:id="@+id/sign_up_action_button_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_field"
        />
    <TextView
        android:id="@+id/sign_up_sudah_punya_akun_sebelumnya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sudah_punya_akun_sebelumnya"/>
    <Button
        android:id="@+id/sign_up_switch_button_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_field"
        />
</LinearLayout>