<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<LinearLayout

    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/agg_item"
    android:layout_margin="10dp"
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:text="@string/nominal"
    android:id="@+id/agg_nominal"
    android:textSize="15sp"
    android:gravity="center"
    android:layout_marginStart="0dp"
    android:layout_weight="0.1"
    />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:text="@string/harga"
    android:id="@+id/agg_price"
    android:textSize="15sp"
    android:gravity="center"
    android:layout_weight="0.9"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/provider"
        android:id="@+id/agg_provider_name"
        android:textSize="15sp"
        android:layout_weight="0.9"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/provider_icon"
        android:id="@+id/agg_provider_img"
        android:src="@mipmap/ic_launcher"
        android:layout_weight="0.1"/>


</LinearLayout>

</LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:id="@+id/agg_item_separator"
    android:visibility="visible"
    android:background="@color/common_google_signin_btn_text_dark_focused"
    />
</LinearLayout>