<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:textSize="30sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/imgTelkomsel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:cardPreventCornerOverlap="false">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/carrier_tsel"
                        android:src="@drawable/tsel" />


                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/carrier_tsel" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/imgIndosat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:cardPreventCornerOverlap="false">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/carrier_indosat"
                        android:src="@drawable/indosat" />
                </android.support.v7.widget.CardView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/carrier_indosat" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/imgXL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/carrier_xl"
                        android:src="@drawable/xl2" />

                </android.support.v7.widget.CardView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/carrier_xl" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/imgAXIS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:cardPreventCornerOverlap="false">


                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/carrier_axis"
                            android:src="@drawable/axis" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/carrier_axis" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:cardPreventCornerOverlap="false">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/carrier_tri"
                            android:src="@drawable/tri" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/carrier_tri" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/imgSmartfren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:cardPreventCornerOverlap="false">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:contentDescription="@string/carrier_smartfren"
                            android:src="@drawable/smartfren" />
                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/carrier_smartfren" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/cipcipphow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/source_code_link" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>